More layout changes Fixed bug on big numbers being rounded instead of truncated

--- a/game/css/index.css
+++ b/game/css/index.css
@@ -72,7 +72,8 @@ button {
 }
 
 #lastSaved {
-    font-size: small;
+    font-size: x-small;
     color: gray;
     font-style: italic;
+    white-space: normal;
 }
